# LegalScope

./: CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
data/: README.md
data/metadata/: dataset_summary.json  model_groups.csv  source_composition.csv
data/sample/: README.md
docs/: AI_WORKFLOW.md  ANNOTATION_PROTOCOL.md  DATA_CARD.md  FIGURE_SOURCES.md  HUGGINGFACE_RELEASE.md  PROJECT_BRIEF.md  PROVENANCE.md  PUBLICATION_CHECKLIST.md  RELEASE_STATUS.md  RESULTS_SUMMARY.md  SCORING_RUBRIC.md
scripts/: extract_public_sample.py
src/legalscope/: __init__.py
tests/: test_workbook.py
